# TechTideAI2

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEMO_WALKTHROUGH.md  Dockerfile  Dockerfile.agents  Dockerfile.backend  Dockerfile.frontend  Dockerfile.python  LICENSE  Makefile  PRE_DEMO_AUDIT_PROMPT.md  README.md  RELEASE_NOTES_0.5.5.md  SECURITY.md  docker-compose.override.yml.example  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-dev.sh  tsconfig.base.json
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md
agents/: .env.example  README.md  agents.md  eslint.config.js  package.json  runtime_config.yaml  tsconfig.json  vitest.config.ts
agents/python/: README.md  pyproject.toml
agents/python/src/techtide_agents/: __init__.py  chains.py  graph.py  notebook_bridge.py  server.py
agents/python/src/techtide_agents/contracts/: __init__.py  generated.py
agents/python/src/techtide_agents/runtime/: __init__.py  dispatcher.py  langgraph_runtime.py  llm.py
agents/python/tests/: test_contract_sync.py  test_dispatcher.py  test_graph.py  test_langgraph_runtime.py  test_llm.py  test_notebook_bridge.py
apis/: README.md  eslint.config.js  package.json  tsconfig.json
backend/: .env.example  README.md  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
contracts/: schema.json
database/: README.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  BENCHMARK.md  DEV_SETUP.md  EVALS.md  (+3 more)
(+371 files in other folders)
