[project]
name = "techtide-agents"
version = "0.1.0"
description = "Python LangGraph/LangChain tools for TechTideAI"
requires-python = ">=3.11"
dependencies = [
  "langchain>=1.2.15",
  "langchain-openai>=1.1.12",
  "langchain-anthropic>=1.4.0",
  "langgraph>=1.1.6",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
